# hebrew_calendar

./: .gitignore  pyproject.toml  pytest.ini  requirements.txt
doc/: passover_at_sunday.py  weekdays_per_date.py  years_types_histogram.py
scripts/: test.sh
src/: angle.py  date.py  duration.py  ecliptic_lat.py  gematria.py  hdate.py  leap_years.py  molad.py  moon.py  setup.py  sun.py  view_arc.py
src/hdate/: angle.py  duration.py  ecliptic_lat.py  hdate.py  leap_years.py  molad.py  moon.py  sun.py  view_arc.py
src/src1/: gematria.py
test/: README.md  test_ch_10.py  test_ch_11.py  test_ch_12.py  test_ch_13.py  test_ch_14.py  test_ch_15.py  test_ch_16.py  test_ch_17.py  test_ch_9.py  test_hdate.py  test_molad.py
